--- a/index.html
+++ b/index.html
@@ -158,35 +158,17 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
-<p>Welcome to the Cyrup AI installation guide. This documentation will help you get started with Cyrup AI tools quickly and easily.</p>
-<h2 id="one-line-installation"><a class="header" href="#one-line-installation">One-Line Installation</a></h2>
+                        <h1 id="install-cyrup-ai"><a class="header" href="#install-cyrup-ai">Install Cyrup AI</a></h1>
 <pre><code class="language-bash">curl -fsSL https://get.cyrup.ai/bootstrap.sh | bash
 </code></pre>
-<p>That's it! The installer will automatically:</p>
-<ol>
-<li>Install Rust (nightly toolchain)</li>
-<li>Set up your development environment</li>
-<li>Install required system dependencies</li>
-<li>Configure your shell environment</li>
-</ol>
-<h2 id="what-gets-installed"><a class="header" href="#what-gets-installed">What Gets Installed?</a></h2>
-<p>The installer sets up:</p>
+<p>That's it! One line, no options, no configuration needed.</p>
+<p>Works on:</p>
 <ul>
-<li>Rust development environment</li>
-<li>Essential build tools</li>
-<li>Shell configuration (zsh, tmux)</li>
-<li>Development tools (ripgrep, fd)</li>
-<li>GPU support detection</li>
-</ul>
-<h2 id="platform-support"><a class="header" href="#platform-support">Platform Support</a></h2>
-<p>We currently support:</p>
-<ul>
-<li>Ubuntu/Debian Linux</li>
+<li>Ubuntu/Debian</li>
 <li>Amazon Linux</li>
 <li>macOS</li>
 </ul>
-<p>See the <a href="./guide/requirements.html">System Requirements</a> page for more details.</p>
+<p>Automatic GPU detection included.</p>
 
                     </main>
 
