--- a/toc.html
+++ b/toc.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en" class="light" dir="ltr">
+<html lang="en" class="navy" dir="ltr">
     <head>
         <!-- sidebar iframe generated using mdBook
 
@@ -25,6 +25,7 @@
         <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
         <link rel="stylesheet" href="fonts/fonts.css">
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="theme/custom.css">
     </head>
     <body class="sidebar-iframe-inner">
         <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html" target="_parent">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">User Guide</li><li class="chapter-item expanded "><a href="guide/quick-start.html" target="_parent"><strong aria-hidden="true">1.</strong> Quick Start</a></li><li class="chapter-item expanded "><a href="guide/requirements.html" target="_parent"><strong aria-hidden="true">2.</strong> System Requirements</a></li><li class="chapter-item expanded "><a href="guide/installation.html" target="_parent"><strong aria-hidden="true">3.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="guide/installation/ubuntu.html" target="_parent"><strong aria-hidden="true">3.1.</strong> Ubuntu/Debian</a></li><li class="chapter-item expanded "><a href="guide/installation/amazon.html" target="_parent"><strong aria-hidden="true">3.2.</strong> Amazon Linux</a></li><li class="chapter-item expanded "><a href="guide/installation/macos.html" target="_parent"><strong aria-hidden="true">3.3.</strong> macOS</a></li></ol></li><li class="chapter-item expanded "><a href="guide/troubleshooting.html" target="_parent"><strong aria-hidden="true">4.</strong> Troubleshooting</a></li></ol>
