deploy: f68b2c566f42fb2e02cf924115d48b3fa52a18d0

--- a/404.html
+++ b/404.html
@@ -3,8 +3,8 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Page not found - Cyrup AI Installation Guide</title>
-        <base href="/get.cyrup.ai/">
+        <title>Page not found - cyrup bootstrap: &#x60;setcyrup&#x60;</title>
+        <base href="https://get.cyrup.ai">
 
 
         <!-- Custom HTML head -->
@@ -122,7 +122,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">Cyrup AI Installation Guide</h1>
+                    <h1 class="menu-title">cyrup bootstrap: &#x60;setcyrup&#x60;</h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
