--- a/introduction.html
+++ b/introduction.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Introduction - Cyrup AI Installation Guide</title>
+        <title>What It Does - cyrup bootstrap: &#x60;setcyrup&#x60;</title>
 
 
         <!-- Custom HTML head -->
@@ -121,7 +121,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">Cyrup AI Installation Guide</h1>
+                    <h1 class="menu-title">cyrup bootstrap: &#x60;setcyrup&#x60;</h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
@@ -130,7 +130,7 @@
                         <a href="https://github.com/cyrup-ai/get.cyrup.ai" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/cyrup-ai/get.cyrup.ai/edit/main/docs/introduction.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/cyrup-ai/get.cyrup.ai/edit/main/docs/introduction.md#what-it-does" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -159,26 +159,16 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="install-cyrup-ai"><a class="header" href="#install-cyrup-ai">Install Cyrup AI</a></h1>
-<pre><code class="language-bash">curl -fsSL https://get.cyrup.ai/bootstrap.sh | bash
-</code></pre>
-<p>That's it! One line, no options, no configuration needed.</p>
-<p>Works on:</p>
-<ul>
-<li>Ubuntu/Debian</li>
-<li>Amazon Linux</li>
-<li>macOS</li>
-</ul>
-<p>Automatic GPU detection included.</p>
+                        <h1 id="what-it-does"><a class="header" href="#what-it-does">What It Does</a></h1>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-
-                            <a rel="next prefetch" href="guide/quick-start.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                                <i class="fa fa-angle-right"></i>
+                            <a rel="prev" href="introduction.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
                             </a>
+
 
                         <div style="clear: both"></div>
                     </nav>
@@ -186,10 +176,10 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-
-                    <a rel="next prefetch" href="guide/quick-start.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                        <i class="fa fa-angle-right"></i>
+                    <a rel="prev" href="introduction.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
                     </a>
+
             </nav>
 
         </div>
