--- a/print.html
+++ b/print.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Cyrup AI Installation Guide</title>
+        <title>cyrup bootstrap: &#x60;setcyrup&#x60;</title>
         <meta name="robots" content="noindex">
 
 
@@ -122,7 +122,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">Cyrup AI Installation Guide</h1>
+                    <h1 class="menu-title">cyrup bootstrap: &#x60;setcyrup&#x60;</h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
@@ -158,7 +158,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="install-cyrup-ai"><a class="header" href="#install-cyrup-ai">Install Cyrup AI</a></h1>
-<pre><code class="language-bash">curl -fsSL https://get.cyrup.ai/bootstrap.sh | bash
+<pre><code class="language-bash">curl -fsSL https://get.cyrup.ai/assets/bootstrap.sh | bash
 </code></pre>
 <p>That's it! One line, no options, no configuration needed.</p>
 <p>Works on:</p>
@@ -169,12 +169,7 @@
 </ul>
 <p>Automatic GPU detection included.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="quick-start"><a class="header" href="#quick-start">Quick Start</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="system-requirements"><a class="header" href="#system-requirements">System Requirements</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="installation"><a class="header" href="#installation">Installation</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="ubuntudebian"><a class="header" href="#ubuntudebian">Ubuntu/Debian</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="amazon-linux"><a class="header" href="#amazon-linux">Amazon Linux</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="macos"><a class="header" href="#macos">macOS</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="troubleshooting"><a class="header" href="#troubleshooting">Troubleshooting</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="what-it-does"><a class="header" href="#what-it-does">What It Does</a></h1>
 
                     </main>
 
